Redesigned Adverts Tab. Renamed Core.cs to MotdPluginCore.cs Fixed form events not being called Fixed Delete Advert method Updated Libraries Modified the file manager

--- a/MotdPlugin/MotdPlugin.csproj
+++ b/MotdPlugin/MotdPlugin.csproj
@@ -64,7 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adverts.cs" />
-    <Compile Include="Core.cs" />
+    <Compile Include="MotdPluginCore.cs" />
     <Compile Include="FileIOManager.cs" />
     <Compile Include="MotdPluginConfigForm.cs">
       <SubType>Form</SubType>
